[gd_scene load_steps=6 format=3 uid="uid://btb5tmtoqptee"]

[ext_resource type="Script" path="res://autoloads/screen_message.gd" id="1_03var"]
[ext_resource type="AudioStream" uid="uid://dqudjbg5kr4ac" path="res://assets/sfx/decide10.wav" id="2_1vbou"]

[sub_resource type="Animation" id="Animation_iqxid"]
resource_name = "sweep"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(640, 0), Vector2(64, 0), Vector2(-64, 0), Vector2(-640, 0)]
}

[sub_resource type="Animation" id="Animation_inso4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ofunw"]
_data = {
"RESET": SubResource("Animation_inso4"),
"sweep": SubResource("Animation_iqxid")
}

[node name="ScreenMessage" type="CanvasLayer"]
process_mode = 3
layer = 8
script = ExtResource("1_03var")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Area" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="PanelContainer" parent="Area"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -12.0
offset_right = 640.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Message" type="Label" parent="Area/Panel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1vbou")
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ofunw")
}

[connection signal="display_message_signal" from="." to="." method="_on_display_message_signal"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
